--- a/jp/effects-5.qmd
+++ b/jp/effects-5.qmd
@@ -56,7 +56,7 @@ $$
 :::
 
 ::: voice-father
-お父さん「ああ、文脈がないとそう読むのが普通かもね。指数分布の式の方はね、*この式以前に*、もともとハザードが一定なんだ。下のCox回帰をみると、$\lambda_1(x)$と$\lambda_2(x)$は時間$x$の関数で、ハザード比だけが一定っていうある種の制約を表している」
+お父さん「ああ、文脈がないとそう読むのが普通かもね。指数分布の式の方はね、"この式以前に"もともとハザードが一定なんだ。下のCox回帰をみると、$\lambda_1(x)$と$\lambda_2(x)$は時間$x$の関数で、ハザード比だけが一定っていうある種の制約を表している」
 :::
 
 ::: voice-daughter
@@ -64,7 +64,7 @@ $$
 :::
 
 ::: voice-father
-お父さん「つまりこの式が出た時点で、はじめて**比例ハザード性**が仮定された、あるいは構造が決まったっていうような文脈でとらえてほしいんだ」
+お父さん「つまりこの式が出た時点で、はじめて**比例ハザード性**が仮定された、あるいは構造が決まったっていうようなロジックでとらえてほしいんだ」
 :::
 
 ::: voice-daughter
@@ -92,9 +92,17 @@ $$
 ::: voice-father
 お父さん「Cox回帰のよさはいくつもあるけど、$\lambda_1(x)$と$\lambda_2(x)$はどんな関数でもいいという点が、とても実用的なんだ。比例ハザード性という仮定はあるけどね。その点、指数分布はハザードが定数だから、ずっと融通が利かない。データへの当てはまりが悪いんだ」
 :::
+
+::: voice-daughter
+私「つまりCox回帰を使えばいいってことね」
+:::
+
+::: voice-father
+お父さん「他のモデルに比べたら、ね。それでもデータに100%当てはまっている保証はない。だからCox回帰の結果を論文や学会で報告する前には、比例ハザード性のチェックが求められる。生存曲線がクロスしているかどうかや、2重対数プロットが並行かどうかを目安にしてね。2重対数プロットは、Kaplan-Meier曲線を補2重対数変換したものだ」
+:::
 :::::::::::::::::::::::::::::::::
 
-::: {.callout-note appearance="simple" title="補2重対数変換: ハザード比を抽出する変換"}
+::: {.callout-note appearance="simple" collapse="true" title="補2重対数変換: ハザード比を抽出する変換"}
 あまり知られていませんが、Cox回帰に代えて一般化線型モデルでも（離散時間の枠組みで）ハザード比を推定できます。リンク関数として補2重対数変換（`glm`でいえば `binomial(link = "cloglog")`）を選びます。Cox回帰の構造を深堀するために、指数分布のもとで「生存関数に log(-log) を当てる」と何が起きるかを見てみましょう。指数分布のハザード比と回帰係数を$\beta=\log(HR)$と表すことにします。
 
 2群の生存関数を、ハザード$\lambda_1$と$\lambda_2$を使って
@@ -113,10 +121,10 @@ $-\log\{S_2(x)\}=\lambda_2 x$
 
 $\log[-\log\{S_1(x)\}]-\log[-\log\{S_2(x)\}]=\log(\lambda_1 x)-\log(\lambda_2 x)=\log(HR)=\beta$
 
-この結果は、比例ハザード性の下では常に成り立ちます。つまり、同じ時点$x$の下で2群の差をとると、**時間$x$がキャンセルして回帰係数$\beta$だけが残ります**。生存時間解析の裏では、生存関数から回帰係数（対数ハザード比）を抽出するために、この変換が使われています。その一例は、比例ハザード性の図示（いわゆるログログプロット）です。Kaplan–Meier曲線の補2重対数変換をとると、曲線間の比例ハザード性が、曲線の平行移動に置き換わるのです。
+この結果は、比例ハザード性の下では常に成り立ちます。つまり、同じ時点$x$の下で2群の差をとると、**時間$x$がキャンセルして回帰係数$\beta$だけが残ります**。生存時間解析の裏では、生存関数から回帰係数（対数ハザード比）を抽出するために、この変換が使われています。その一例は、比例ハザード性の図示（いわゆる2重対数プロット）です。Kaplan–Meier曲線の補2重対数変換をとると、曲線間の比例ハザード性が、曲線の平行移動に置き換わるのです。
 :::
 
-::: {.callout-note appearance="simple"  title="このエピソードに関係するクイズです"}
+::: {.callout-note appearance="simple" title="このエピソードに関係するクイズです"}
 
 ![](frequentist-2.jpg)
 
@@ -128,7 +136,7 @@ $\log[-\log\{S_1(x)\}]-\log[-\log\{S_2(x)\}]=\log(\lambda_1 x)-\log(\lambda_2 x)
 4.  Wilcoxon
 :::
 
-::: {.callout-note appearance="simple"  collapse="true" title="答えはこちら"}
+::: {.callout-note appearance="simple" collapse="true" title="答えはこちら"}
 -   **正解は3です**
 
 この方がCox先生です。
