--- a/jp/logistic-regression-2.qmd
+++ b/jp/logistic-regression-2.qmd
@@ -131,12 +131,12 @@ glm(y ~ x1 + x2, family = binomial(), data = dat)
 ::::::::::::::::::::::::::::::::: 
 
 ```{r eval=FALSE}
-X <- model.matrix(~ x1 + x2, data = dat)
+Z <- model.matrix(~ x1 + x2, data = dat)
 ```
 
 ::::::::::::::::::::::::::::::::: dialogue
 ::: voice-father
-お父さん「ちょっとマニアックだけど、Rの内部では、`model.matrix()`っていう関数で、デザイン行列$X$を作っている。$X$の最初の列はすべて1になる。これは回帰直線でいう切片に対応している。次の列以降はx1とx2に対応する値が計算される。こうしておくと、たとえばx1が文字列でも数値に置き換えて計算できたり、回帰係数との掛け算が行列として計算できたり、なにかと都合がいい。ここまで覚えなくていいけど、仕組みを知っておくと理解が進むでしょ」
+お父さん「ちょっとマニアックだけど、Rの内部では、`model.matrix()`っていう関数で、デザイン行列$Z$を作っている。$Z$の最初の列はすべて1になる。これは回帰直線でいう切片に対応している。次の列以降はx1とx2に対応する値が計算される。こうしておくと、たとえばx1が文字列でも数値に置き換えて計算できたり、回帰係数との掛け算が行列として計算できたり、なにかと都合がいい。ここまで覚えなくていいけど、仕組みを知っておくと理解が進むでしょ」
 ::: 
 
 ::: voice-daughter
