--- a/jp/effects-5.qmd
+++ b/jp/effects-5.qmd
@@ -76,7 +76,7 @@ $$
 :::
 
 ::: voice-daughter
-私「これがCox回帰の式ね。ロジスティック回帰の式に比べてシンプルすぎて見てて不安になるな。比例ハザード性っていう聞き覚えのある単語で説明されてやっと安心する」
+私「これがCox回帰の式だったんだね。割り算じゃなくてモデル...。ロジスティック回帰の式に比べてシンプルすぎて見てて不安になるな。比例ハザード性っていう聞き覚えのある単語で説明されてやっと安心する」
 :::
 
 ::: voice-father
@@ -98,7 +98,7 @@ $$
 :::
 
 ::: voice-father
-お父さん「他のモデルに比べたら、ね。それでもデータに100%当てはまっている保証はない。だからCox回帰の結果を論文や学会で報告する前には、比例ハザード性のチェックが求められる。生存曲線がクロスしているかどうかや、2重対数プロットが並行かどうかを目安にしてね。2重対数プロットは、Kaplan-Meier曲線を補2重対数変換したものだ」
+お父さん「他のモデルに比べたら、ね。それでもデータに100%当てはまっている保証はない。だからCox回帰の結果を論文や学会で報告する前には、比例ハザード性のチェックが求められる。生存曲線がクロスしているか、とか、2重対数プロットがだいたい並行かどうか、とか。まずはその辺を目安にするんだ。2重対数プロットは、Kaplan-Meier曲線を補2重対数変換して描く」
 :::
 :::::::::::::::::::::::::::::::::
 
