--- a/en/publish-a-paper-4.qmd
+++ b/en/publish-a-paper-4.qmd
@@ -65,8 +65,6 @@ I nodded slightly, and began typing again—slowly.
 :::
 :::::::::::::::::::::::::::::::::
 
-Acknowledgements
-
-We thank an anonymous statistician for thoughtful advice.
+Acknowledgements ― We thank an anonymous statistician for thoughtful advice.
 
 ### And that was the morning before submission. 
