--- a/jp/publish-a-paper-4.qmd
+++ b/jp/publish-a-paper-4.qmd
@@ -65,6 +65,6 @@ date: 2025-12-13
 :::
 :::::::::::::::::::::::::::::::::
 
-Acknowledgements ― We appreciate the advice from an anonymous statistician.
+Acknowledgements ― We thank an anonymous statistician for thoughtful advice.
 
-### This concludes the story. 
+### And that was the morning before submission. 
