--- a/jp/publish-a-paper-4.qmd
+++ b/jp/publish-a-paper-4.qmd
@@ -65,6 +65,6 @@ date: 2025-12-13
 :::
 :::::::::::::::::::::::::::::::::
 
-Acknowledgements ― We thank an anonymous statistician for thoughtful advice.
+Acknowledgements ― We are grateful to an anonymous statistician for thoughtful advice.
 
-### And that was the morning before submission. 
+### That was the morning before submission.
