--- a/jp/causal-inference-6.qmd
+++ b/jp/causal-inference-6.qmd
@@ -102,7 +102,7 @@ Keywords: causal model, probability model, p-value, language & writing
 :::
 
 ::: voice-daughter
-私「調査票を作るとき、情報バイアスを減らすには、曖昧な質問をしないのが一番だと思うし、言葉を定義しておくとぶれないってお父さんがいうのもよく分かる。言葉の曖昧性って、考えていたより深刻な問題だよね。データを扱うときって、情報は固定されていても、言語の方がぶれがちなんだ」
+私「調査票を作るとき、情報バイアスを減らすには、曖昧な質問をしないのが一番だと思うし、言葉を定義しておくとぶれないってお父さんがいうのもよくわかる。言葉の曖昧性って、考えていたより深刻な問題だよね。データを扱うときって、情報は固定されていても、言語の方がぶれがちなんだ」
 :::
 :::::::::::::::::::::::::::::::::
 
