--- a/jp/truth-3.qmd
+++ b/jp/truth-3.qmd
@@ -44,7 +44,7 @@ Keywords: causal model, language &writing, probability model, research hypothesi
 ::: 
 
 ::: voice-father
-お父さん「電卓やそろばんの時代はそれでよかったけど今は違う。どんな情報処理系も汎用化されると、与えた目的を目的関数として解釈して解を求めるんだ。目的が精密になればなるほど答えも欲しいものに近づく。合目的的な正しさなんだ」 
+お父さん「電卓やそろばんの時代はそれでよかったけど今は違う。どんな情報処理系も汎用化されると、与えた目的を目的関数として解釈して解を求める。だから目的が精密になればなるほど答えも欲しいものに近づく。それは合目的的な正しさなんだ」 
 ::: 
 
 ::: voice-daughter
@@ -52,11 +52,11 @@ Keywords: causal model, language &writing, probability model, research hypothesi
 ::: 
 
 ::: voice-father
-お父さん「そうだね、問いへの答えとその確からしさを知ることだね。臨床試験のように研究仮説を立てて、それにあわせて研究計画書を書けば、精密な答えが返ってくるはず。ランダム誤差とバイアスを統計的に扱うのは、答えの不確実性にもまた興味があるからじゃない？」
+お父さん「そうだね、問いへの答えとその確からしさを知ることだね。臨床試験のように研究仮説を立てて、それにあわせて研究計画書を書けば、精密な答えが返ってくるはず。ランダム誤差とバイアスが研究で扱われるのは、答えの不確実性にもまた興味があるからじゃない？」
 ::: 
 
 ::: voice-daughter
-私「確かに、的の中心が決まらないと、矢の狙いが偏っているか調整もできないな。逆算すると、研究仮説の形で真値を固めておかないと、オッズ比が正しいかどうか判断できないんだ」
+私「その発想、統計っぽい。信頼区間や標準誤差をつけなきゃってのは言われなくても知ってたよ。そっか、でも、調整がうまくいったかどうかにも関係するね、それ。的の中心が決まらないと、矢の狙いが偏らないように調整できない。逆算すると、研究仮説の形で真値を固めておかないと、オッズ比が正しいかどうか判断できないんだ」
 ::: 
 
 ::: voice-father
@@ -64,7 +64,7 @@ Keywords: causal model, language &writing, probability model, research hypothesi
 ::: 
 
 ::: voice-daughter
-私「...じゃあ、真値ってよく聞く言葉だけど、自然のどこかに転がっている数字じゃないんだね」
+私「...じゃあ、真値ってよく聞く言葉だけどあんまりわかってなかった。それって自然のどこかに転がっている数字じゃないんだね」
 ::: 
 ::::::::::::::::::::::::::::::::: 
 
