--- a/jp/truth-2.qmd
+++ b/jp/truth-2.qmd
@@ -111,7 +111,15 @@ Keywords: causal model, language & writing, probability model, research hypothes
 - 因果モデル: 観測された世界と、観測されなかった世界の両方で、原因を変えたら結果はどうなっていたかを表す構造
 
 ::: voice-father
-お父さん「これはちょうど、データが発生する背後に因果モデルがあるという創造的な階層関係なんだ。因果的な構造に従って生じた現象を測定したものがデータだといってもいい。ほら、さっきいったように潜在結果変数は観測できないでしょ」
+お父さん「これはちょうど、データが発生する背後に因果モデルがあるという創造的な階層関係なんだ。因果的な構造に従って生じた現象を測定したものがデータだといってもいい」
+:::
+
+::: voice-daughter
+私「わからんな。統計学ではデータはサンプル、確率分布は母集団って習ったが。違うのか」
+:::
+
+::: voice-father
+お父さん「いや、違わない。それの延長線上の話。母集団=確率モデルでもいい。統計学の母集団は確かに抽象的なこともあるよ。でも、サンプルを無限に集めるとデータは母集団に近づくという意味で、現実世界と結びついている。でも、ほら、さっきいったように潜在結果変数は観測できないでしょ」
 :::
 
 ::: voice-daughter
@@ -139,11 +147,11 @@ Keywords: causal model, language & writing, probability model, research hypothes
 :::
 
 ::: voice-daughter
-私「お父さんは専門だからわかってないけど、私にとってはロジスティック回帰もRubin因果モデルも初めて聞く概念なんだよ。絶賛こんがらがり中だわ。Rubin因果モデルって、ある患者に別の方法で治療したら結果はどうなっていたかを分析すればいいんでしょ？それって解剖・病態生理・薬理に関する基礎知識と臨床経験を組み合わせればできそうなことじゃない？」
+私「お父さんは専門だからわかってないけど、私にとってはロジスティック回帰もRubin因果モデルも最近知ったばっかなんだよ。絶賛こんがらがり中だわ。Rubin因果モデルって、ある患者に別の方法で治療したら結果はどうなっていたかを分析すればいいんでしょ？それって解剖・病態生理・薬理に関する知識と臨床経験を組み合わせればできそうなことじゃない？」
 :::
 
 ::: voice-father
-お父さん「本質的にはその通り。でも、それはあくまで患者ひとりひとりにとっての原因と結果を分析するアプローチになっている。個々の事象に関する因果を単一因果（token causation）っていうんだけど、それと一般法則としての因果には、まだギャップがあるよね」
+お父さん「本来的にはその通り。でも、それはあくまで患者ひとりひとりにとっての原因と結果を分析するアプローチになっている。個々の事象に関する因果を単一因果（token causation）っていうんだけど、それと一般法則としての因果には、まだギャップがあるよね」
 :::
 
 ::: voice-daughter
