--- a/jp/truth-2.qmd
+++ b/jp/truth-2.qmd
@@ -119,7 +119,7 @@ Keywords: causal model, language & writing, probability model, research hypothes
 :::
 
 ::: voice-father
-お父さん「いや、違わない。それの延長線上の話。母集団=確率モデルでもいい。統計学の母集団は確かに抽象的なこともあるよ。でも、サンプルを無限に集めるとデータは母集団に近づくという意味で、現実世界と結びついている。でも、ほら、さっきいったように潜在結果変数は観測できないでしょ」
+お父さん「いや、違わない。それの延長線上の話。母集団=確率モデルでもいい。統計学の母集団は確かに抽象的なこともあるよ。でもサンプルを無限に集めるとデータは母集団に近づくという意味で、現実世界と結びついている。その一方でさ、ほら、さっきいったように潜在結果変数は観測できないでしょ」
 :::
 
 ::: voice-daughter
@@ -143,7 +143,7 @@ Keywords: causal model, language & writing, probability model, research hypothes
 :::
 
 ::: voice-father
-お父さん「ここで知ってほしかったのは、回帰係数やオッズ比を、因果関係を考えるための証拠として正しく解釈するためには、因果モデルが必要だってこと」
+お父さん「ほら、問題になっているのは回帰係数やオッズ比の計算方法じゃなくて解釈ってことだよ。これらの指標を、因果関係を考えるための証拠として扱うときは、因果モデルが必要だってこと」
 :::
 
 ::: voice-daughter
