--- a/jp/effects-6.qmd
+++ b/jp/effects-6.qmd
@@ -172,6 +172,7 @@ generate_data <- function(n=200, hr1, hr2) {
 ::: {.callout-note appearance="simple" collapse="true" title="Rコードと結果はこちら"}
 ```{r warning=FALSE}
 library(cifmodeling)
+set.seed(46)
 dat <- generate_data(hr1=2, hr2=1.5) #再発ハザード比2, 死亡ハザード比1.5のデータ生成
 rr_at_5 <- polyreg(nuisance.model=Event(time_os,status_os)~1, exposure="stoma", data=dat, 
                     effect.measure1="RR", time.point=5, outcome.type="survival")
