--- a/jp/logistic-regression-2.qmd
+++ b/jp/logistic-regression-2.qmd
@@ -126,7 +126,7 @@ glm(y ~ x1 + x2, family = binomial(), data = dat)
 ::: 
 
 ::: voice-father
-お父さん「そうだね。Rの中では、この式がデザイン行列$X$に変換されてる」
+お父さん「そうだね。Rの中では、この式がデザイン行列$Z$に変換されてる」
 ::: 
 ::::::::::::::::::::::::::::::::: 
 
