--- a/jp/causal-inference-1.qmd
+++ b/jp/causal-inference-1.qmd
@@ -243,6 +243,7 @@ Keywords: causal model, clinical trial, confounding & collapsibility, observatio
 - [Frequentist Experiments I](frequentist-4.html)
 - [Effects and Time I](effects-1.html)
 - [Adjusting for Bias I](logistic-regression-1.html)
+- [Truth I](truth-1.html)
 
 **用語集**
 
