--- a/jp/index.qmd
+++ b/jp/index.qmd
@@ -116,7 +116,7 @@ listing:
 
 ::: {.callout-note appearance="simple" collapse="true" title="あらすじとRスクリプト"}
 - **Silent Confusions Hidden in Percentages**
-　疫学の研究結果の多くは、わかりやすくパーセントで報告されますが、それが数字が独り歩きする理由だったとは。言葉の意味を知ることの大切さを父は語ります。
+　パーセントは直感的な疫学指標ですが、それが数字が独り歩きする理由だったとは。言葉のずれを父は語ります。
 - **Who Is This Percentage About Target Populations and Attributable Fractions**
 　数字が独り歩きするのは、計算が理解されていない事だけが理由ではありません。言葉の裏に潜む集団の違いについて。
 - **When Odds Ratios Approximate Risk Ratios and When They Fail**
@@ -124,7 +124,7 @@ listing:
 - **From Risk and Rate to Survival and Hazard**
 　「生存曲線やハザード比について納得感が足りないの」娘の視点で学ぶ生存時間解析の入門講義。
 - **A First Note on Cox Regression**
-　Cox回帰はハザード比のモデルと言い切っていいのか？より正確な理解に迫ります。
+　Cox回帰はハザード比のモデルと言い切れるのか？便利さの裏側にある前提に迫ります。
 - **After Cox Regression: A Case Study and R Demonstration**
 　リスク比、ハザード比、そして時間とともに変化する効果。因果推論に先立って立体的なデータの見方が静かに育ちます。
 
@@ -146,9 +146,9 @@ listing:
 - **Understanding Collapsibility of Effect Measures: Marginal vs Stratified**
 　層別解析・ロジスティック回帰とSimpsonのパラドックスの関係は？がん臨床試験で用いられる層別Cox回帰にもつながるエピソード。
 - **From Risk to Logistic Regression**
-　「教えられた通り、Rのglm関数でロジスティック回帰をしてみたんだけど、なんだかブラックボックスみたい」父は娘の疑問に答えます。
+　「教えられた通り、Rでロジスティック回帰をしてみたんだけど、なんだかブラックボックスみたい」父は娘の疑問に答えます。
 - **Logit: How a Transformation Shapes an Effect**
-　ロジスティック回帰を特徴づけるのはロジット関数です。娘は、なぜロジット関数が用いられるのか統計学の秘密を知らされます。
+　ロジスティック回帰を基本骨格であるロジット関数。なぜロジット関数が用いられるのか統計学の秘密を明かします。
 - **Where My Logistic Regression Went Wrong**
 　結果の見方、表の作り方から、使用上の落とし穴まで、父から統計解析の手ほどきを受けるエピソード。
 - **Why Logistic Regression Fails in Small Samples**
@@ -182,9 +182,9 @@ listing:
 - **A Subtle Distinction between Common Causes and Confounders**
 　「交絡因子」は言葉として便利すぎる。共通原因と交絡のズレを、図で丁寧に区別します。
 - **DAGs and Conditional Distributions: Two Languages for the Same Structure**
-　図は直感、式は精密。DAGと条件付き確率が、同じものを別の言語で言っている感覚をつかみます。
+　図は直感、式は精密。DAGと条件付き確率が、同じものを別の言語で語る感覚をつかみます。
 - **A Circle, an Equation, and a Cylinder**
-　確率モデルとDAGとRubin因果モデルっていったいなに？娘の疑問への答え。
+　DAGと確率モデルとRubin因果モデルっていったいなに？娘の疑問への答え。
 - **Backdoor Paths, Block, and d-Separation: A Clue for Adjusting for Bias**
 　「ブロックする」とは、どのような操作をDAGに加えることなのか。バイアスの源を探す手触りを、最小限の形式で確かめます。
 - **Volatility, Uncertainty, Complexity, and Ambiguity in Causal Inference**
