--- a/jp/index.qmd
+++ b/jp/index.qmd
@@ -30,9 +30,18 @@ listing:
 
 ------------------------------------------------------------------------
 
-## ご案内
+## はじめての方へ
 
-どのエピソードも独立していますが、ふたりの会話は[研究仮説と研究デザイン](study-design-1.html)から始まります。そこから先は、物語を追っても、興味の向くレイヤーを選んでも構いません。ちょっとしたおすすめは[臨床試験とp値](frequentist-1.html)、[研究の中の因果推論](logistic-regression-1.html)あたり。全体を通して読むと、散らばっていた意味どうしがつながり、きっといくつかのことが見えてきます。
+この物語は、研究仮説→統計→因果→言葉という順で、ふたりの会話に沿って螺旋状に進みます。迷ったら最初のエピソードからどうぞ。
+
+- [研究仮説と研究デザイン](study-design-1.html)
+
+どのエピソードも独立しているので、興味の向くレイヤーを選んでも構いません。ちょっとしたおすすめは以下の2エピソード。
+
+- [臨床試験とp値](frequentist-1.html)
+- [研究の中の因果推論](logistic-regression-1.html)
+
+全体を通して読むと、散らばっていた意味どうしがつながり、どこかで別の世界が見えてきます。
 
 ------------------------------------------------------------------------
 
