--- a/jp/index.qmd
+++ b/jp/index.qmd
@@ -32,16 +32,13 @@ listing:
 
 ## はじめての方へ
 
-この物語は、研究仮説→統計→因果→言葉という順で、ふたりの会話に沿って螺旋状に進みます。迷ったら最初のエピソードからどうぞ。
+この物語は、研究仮説→統計→因果→言葉という順で、ふたりの会話に沿って、螺旋状に進みます。迷った方へのおすすめエピソードはこちら。
 
-- [研究仮説と研究デザイン](study-design-1.html)
+- [会話のはじまりと研究仮説（Study Design I）](study-design-1.html)
+- [臨床試験とp値（Frequentist Thinking I）](frequentist-1.html)
+- [研究の中の因果推論（Adjusting for Bias I）](logistic-regression-1.html)
 
-どのエピソードも独立しているので、興味の向くレイヤーを選んでも構いません。ちょっとしたおすすめは以下の2エピソード。
-
-- [臨床試験とp値](frequentist-1.html)
-- [研究の中の因果推論](logistic-regression-1.html)
-
-全体を通して読むと、散らばっていた意味どうしがつながり、どこかで別の世界が見えてきます。
+どのエピソードも独立しているので、興味の向くレイヤーを選んでも構いません。全体を通して読むと、散らばっていた意味どうしがつながり、どこかで別の世界が見えてきます。
 
 ------------------------------------------------------------------------
 
