--- a/en/publish-a-paper-4.qmd
+++ b/en/publish-a-paper-4.qmd
@@ -57,9 +57,9 @@ Because this study involves patients, its hypothesis inevitably reflects clinica
 
 Many things pass unnoticed while we are working, or talking with others over coffee. When I am alone, I understand them more clearly.
 
-The coffee had cooled at the edge of the desk. On the monitor, the freshly written Conclusion was displayed.
+The surface of the coffee rippled faintly, as if in sync with the rain outside the window. On the monitor, the freshly written Conclusion was displayed.
 
-I checked each line, making sure it answered the questions we held when we designed the study. 
+I checked each line, making sure it answered the questions we held when we designed the study 
 
 I nodded slightly, and began typing again—slowly.
 :::
