--- a/jp/truth-2.qmd
+++ b/jp/truth-2.qmd
@@ -84,7 +84,7 @@ Keywords: causal model, language & writing, probability model, research hypothes
 ::: 
 
 ::: voice-father
-お父さん「一番の違いはひとつ。ランダム化しているかどうか。そもそもランダム化臨床試験は、"介入したら結果はどうなるか"を調べるためにデザインされているからね。ターゲット集団も明確に定義されているし、介入もランダムに割付けられていてバイアスもない。がんサバイバー調査のような観察研究では、研究仮説やPECOをどんなに慎重に考えても、曖昧なところは残る。特にPatientsとControlsがね。比較可能性についても、交絡因子のデータがバイアスを調整するためじゅうぶんかどうかわからない」
+お父さん「一番の違いはひとつ。ランダム化しているかどうか。そもそもランダム化臨床試験は、"介入したら結果はどうなるか"を調べるためにデザインされているからね。ターゲット集団も明確に定義されているし、介入もランダムに割付けられていてバイアスもない」
 ::: 
 
 ::: voice-daughter
@@ -92,90 +92,19 @@ Keywords: causal model, language & writing, probability model, research hypothes
 ::: 
 
 ::: voice-father
-お父さん「話を戻そう。Rubin因果モデルは、解析するモデルや交絡調整について考える前に、潜在結果変数を定義し、その差について推測するんだ」
+お父さん「がんサバイバー調査のような観察研究では、研究仮説やPECOをどんなに慎重に考えても、曖昧なところは残る。比較可能性だって、交絡因子のデータがバイアスを調整するためじゅうぶんかどうかわからない」
 ::: 
-::::::::::::::::::::::::::::::::: 
-
-### 確率モデルと因果モデルの補完関係
-
-::::::::::::::::::::::::::::::::: dialogue
-::: voice-daughter
-私「やっぱりわからないな。一般化線型モデルやCox回帰の結果って、なにを見てるの？回帰係数は因果効果とは違うの？」
-:::
-
-::: voice-father
-お父さん「ひとつの数字が二重、三重の意味を持っているっていったらいいかな。根っこをたどると、確率モデルと因果モデルは二階建てなんだ」
-:::
-
-- 確率モデル: 観測されたデータがどう生じるかを記述する構造
-- 因果モデル: 観測された世界と、観測されなかった世界の両方で、原因を変えたら結果はどうなっていたかを表す構造
-
-::: voice-father
-お父さん「これはちょうど、データが発生する背後に因果モデルがあるという創造的な階層関係なんだ。因果的な構造に従って生じた現象を測定したものがデータだといってもいい」
-:::
 
 ::: voice-daughter
-私「わからんな。統計学ではデータはサンプル、確率分布は母集団って習ったが。違うのか」
-:::
+私「たしかにね。調査の場合、どんな集団が調査対象なのか、どんな群と比較することになるのか、調査結果が返ってこないと決まらない。想定してた研究仮説とずれるよね、そりゃ」
+::: 
 
 ::: voice-father
-お父さん「いや、違わない。それの延長線上の話。母集団=確率モデルでもいい。統計学の母集団は確かに抽象的なこともあるよ。でもサンプルを無限に集めるとデータは母集団に近づくという意味で、現実世界と結びついている。その一方でさ、ほら、さっきいったように潜在結果変数は観測できないでしょ」
-:::
-
-::: voice-daughter
-私「うん」
-:::
-
-::: voice-father
-お父さん「だからね、データは影みたいなものなんだ。見たいものは、その少し向こう側にいる」
-:::
-
-::: voice-daughter
-私「そういわれると確かに因果関係の真実は、データの発生する前から存在するのかもね。実感はないけど理解はした。でも、それならどうして最初からロジスティック回帰じゃなくて因果モデルを教えなかったの？」
-:::
-
-::: voice-father
-お父さん「ふむ。もう少し説明が必要だね。ロジスティック回帰や層別解析を使っちゃいけないわけじゃない。それは方法なんだ。ルービックキューブの解き方みたいなもの。ルービックキューブの構造とは別物」
-:::
-
-::: voice-daughter
-私「べつもの」
-:::
-
-::: voice-father
-お父さん「ほら、問題になっているのは回帰係数やオッズ比の計算方法じゃなくて解釈ってことだよ。これらの指標を、因果関係を考えるための証拠として扱うときは、因果モデルが必要だってこと」
-:::
-
-::: voice-daughter
-私「お父さんは専門だからわかってないけど、私にとってはロジスティック回帰もRubin因果モデルも最近知ったばっかなんだよ。絶賛こんがらがり中だわ。Rubin因果モデルって、ある患者に別の方法で治療したら結果はどうなっていたかを分析すればいいんでしょ？それって解剖・病態生理・薬理に関する知識と臨床経験を組み合わせればできそうなことじゃない？」
-:::
-
-::: voice-father
-お父さん「本来的にはその通り。でも、それはあくまで患者ひとりひとりにとっての原因と結果を分析するアプローチになっている。個々の事象に関する因果を単一因果（token causation）っていうんだけど、それと一般法則としての因果には、まだギャップがあるよね」
-:::
-
-::: voice-daughter
-私「トークン？ぴんとこない言葉だけど」
-:::
-
-::: voice-father
-お父さん「たとえば"あの患者さんが助かったのはこの薬のおかげか？"というレベルの話がtoken causationに近い」
-:::
-
-::: voice-daughter
-私「ああ、そういうこと。有害事象と薬の因果関係を判定をする、みたいなことね。そういわれたら、個々の出来事と一般法則どっちも因果っていうね」
-:::
-
-::: voice-father
-お父さん「臨床試験や調査は集団を対象にしているよね。集団を統計的に分析することで法則性を見出そうとしているんだ。そのための道具を用意するためのベースになっているのが、確率分布や回帰モデルだっていう話だったでしょ。確率モデルと因果モデルは役割が違う」
-:::
-
-::: voice-daughter
-私「また、難しい話に戻ってきたね。コーヒーもう一杯くれる？」
-:::
+お父さん「話を戻そう。いい？ランダム化臨床試験と観察研究で別の因果モデルだとは言ってないよ。むしろ逆で、Rubin因果モデルは、統計手法や交絡調整について考える前に、潜在結果変数を定義する。その差が因果効果。調査結果を回収するより前に研究仮説がないとおかしいのと同じで、推定方法より先に、なにを推定したいのかを決めておくんだ」
+::: 
 ::::::::::::::::::::::::::::::::: 
 
 ### 次のエピソード
 
-- [What Is It That You Want to Know?](truth-3.html)
+- [What Structures Structure](truth-3.html)
 
