--- a/en/index.qmd
+++ b/en/index.qmd
@@ -170,6 +170,7 @@ What exactly is the purpose of the DAG tool? A daughter's response to her father
 
 - [What Data Cannot Tell Us]
 - [What Could Have Happened]
+- [What Structures Structure]
 - [What Is It That You Want to Know?]
 
 ### 8. Causal Inference — To find causality
