--- a/jp/publish-a-paper-4.qmd
+++ b/jp/publish-a-paper-4.qmd
@@ -59,7 +59,7 @@ date: 2025-12-13
 
 たくさんのことが、仕事をしている間や、誰かとおしゃべりをしているときには、通り過ぎてしまう。ひとりになると、それがよくわかる。
 
-コーヒーの水面が、窓の外の雨に合わせるようにかすかに揺れていた。モニターには、書き上げたばかりのConclusionが映っている。調査をデザインしたときに抱いていた疑問に、答えられているか。ひとつひとつ確かめる。 
+コーヒーの水面が、窓の外の雨に合わせるようにかすかに揺れていた。モニターには、書き上げたばかりの結論が映っている。調査をデザインしたときに抱いていた疑問に、答えられているか。ひとつひとつ確かめる。 
 
 私は軽く頷き、 ゆっくりとキーボードを叩いた。
 :::
