--- a/jp/truth-3.qmd
+++ b/jp/truth-3.qmd
@@ -28,12 +28,8 @@ Keywords: causal model, language &writing, probability model, research hypothesi
 ### 確率モデルと因果モデルの補完関係
 
 ::::::::::::::::::::::::::::::::: dialogue
-::: voice-daughter
-私「やっぱりわからないな。一般化線型モデルやCox回帰の結果って、なにを見てるの？回帰係数は因果効果とは違うの？」
-:::
-
 ::: voice-father
-お父さん「ひとつの数字が二重、三重の意味を持っているっていったらいいかな。根っこをたどると、確率モデルと因果モデルは二階建てなんだ」
+お父さん「ふむ。今まで使ってきたロジスティック回帰のオッズ比や回帰係数は、Rubin因果モデルの因果効果と違うのか、か。当然の疑問だけど、同じものとも違うものとも言える、が答えだ。ひとつの数字が二重、三重の意味を持っているっていったらいいかな。根っこをたどると、確率モデルと因果モデルは二階建てなんだ」
 :::
 
 - 確率モデル: 観測されたデータがどう生じるかを記述する構造
