--- a/jp/truth-2.qmd
+++ b/jp/truth-2.qmd
@@ -102,6 +102,10 @@ Keywords: causal model, language & writing, probability model, research hypothes
 ::: voice-father
 お父さん「話を戻そう。いい？ランダム化臨床試験と観察研究で別の因果モデルだとは言ってないよ。むしろ逆で、Rubin因果モデルは、統計手法や交絡調整について考える前に、潜在結果変数を定義する。その差が因果効果。調査結果を回収するより前に研究仮説がないとおかしいのと同じで、推定方法より先に、なにを推定したいのかを決めておくんだ」
 ::: 
+
+::: voice-daughter
+私「やっぱりわからないな。じゃあさ、ロジスティック回帰やCox回帰の結果ってなんなの？オッズ比は因果効果とは違うの？」
+:::
 ::::::::::::::::::::::::::::::::: 
 
 ### 次のエピソード
