--- a/jp/truth-3.qmd
+++ b/jp/truth-3.qmd
@@ -29,15 +29,19 @@ Keywords: causal model, language &writing, probability model, research hypothesi
 
 ::::::::::::::::::::::::::::::::: dialogue
 ::: voice-father
-お父さん「ふむ。今まで使ってきたロジスティック回帰のオッズ比や回帰係数は、Rubin因果モデルの因果効果と違うのか、か。当然の疑問だけど、同じものとも違うものとも言える、が答えだ。ひとつの数字が二重、三重の意味を持っているっていったらいいかな。根っこをたどると、確率モデルと因果モデルは二階建てなんだ」
+お父さん「ふむ、そこはひっかかるよね。今まで使ってきたロジスティック回帰のオッズ比や回帰係数は、Rubin因果モデルの因果効果と違うのか？当然の疑問かもしれない。結論から言うと"同じものとも言えるし、違うものとも言える"」
+:::
+
+::: voice-daughter
+私「なんじゃそりゃ」
+:::
+
+::: voice-father
+お父さん「ひとつの数字が二重、三重の意味を持っているっていったらいいかな。根っこをたどると、因果的な構造に従って生じた現象を測定したものがデータっていうことを押さえてほしい。逆に、データが発生する背後に因果モデルがあるといってもいいけどね。確率モデルと因果モデルは、この関係に対応しているんだ」
 :::
 
 - 確率モデル: 観測されたデータがどう生じるかを記述する構造
 - 因果モデル: 観測された世界と、観測されなかった世界の両方で、原因を変えたら結果はどうなっていたかを表す構造
-
-::: voice-father
-お父さん「これはちょうど、データが発生する背後に因果モデルがあるという創造的な階層関係なんだ。因果的な構造に従って生じた現象を測定したものがデータだといってもいい」
-:::
 
 ::: voice-daughter
 私「わからんな。統計学ではデータはサンプル、確率分布は母集団って習ったが。違うのか」
